[gd_scene load_steps=2 format=3 uid="uid://dej2noy0xi7dq"]

[ext_resource type="Script" path="res://scenes/SettingWithValue.gd" id="1_jmlrg"]

[node name="SettingWithValue" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_jmlrg")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SettingName"
text_overrun_behavior = 3

[node name="Slider" type="HSlider" parent="."]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.01
value = 0.5
scrollable = false
tick_count = 3

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "0.50"

[connection signal="renamed" from="." to="." method="_on_renamed"]
[connection signal="drag_ended" from="Slider" to="." method="_on_Slider_drag_ended"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
